# seminar_random_numbers

./: CMakeLists.txt  Findash_rand.cmake  README.md
doc/: doxygen.conf  doxygen_project_name.conf  main.dox
include/ash_rand/: ash_rand.h  connect-4.hpp  rng.hpp
src/: CMakeLists.txt  ash_rand.cpp  pi_estimation.cpp
src/examples/: CMakeLists.txt  ash_rand_example.cpp
test/: ash_rand_test.cpp
